2004-09-05  Paolo Nenzi <p.nenzi@ieee.org>

	*   src/spicelib/devices/jfet/jfet.c: model type (njf or pjf) was
	    defined as input/output parameter. Now is an input-only parameter,
	    as in other models.
	    
	*   tests/jfet/jfet_vds-vgs.out: Corrected the output after the change
	    in jfet.c. With the old code the number associated to njf or pjf
	    (meaningless) changed each run of ngspice and caused the check
	    process to fail.
	    
	*   src/spicelib/devices/mesa/mesa.c: model type was reported
	    incorrectly. Declared parameter vt0 as "redundant", since it has
	    the same meaning of vto.
	
	*   tests/mesa/mesa11.out: changed test file output accordind to
	    changes in mesa.c. Now model type ic correct.        
	     

2004-09-01  Paolo Nenzi <p.nenzi@ieee.org>
	
	*   src/conf.c: Modified bug reports address. Now it points to a
	    mailing list dedicated to bug reports.
	    

2004-08-29  Paolo Nenzi <p.nenzi@ieee.org>

	*   src/fronted/aspice.c: Added a define for FreeBSD (from 
	    FreeBSD ports archive).


2004-08-22  Paolo Nenzi <p.nenzi@ieee.org>

	*   src/xspice/enhtrans.c: Removed code introduced by Stuart Brorson to
	    limit parsing of POLY statements to dimension 2. Now functions 
	    returns a copy of the error strings that i freed by higher level
	    code once precessed and write the error on the expanded netlist (as
	    comments) instead of expanded lines (this fixes a segmentation fault
	    since INPpas1() does not check if the returned line is not null and 
	    makes expandend netlist more informative). 

2004-08-20  Paolo Nenzi <p.nenzi@ieee.org>
	
	*   src/frontend/{gens.h, gens.c, device.c}: Committed another Vera 
	    Albrecht's patch for the "show" command. This closes the bug
	    definitively.
	    
	*   src/include/{cktdefs.h, dgen.h, ftedebug.h, missing_math.h, 
	    ngspice.h, noisedef.h, sensdef.h}, 
	    src/spicelib/analysis/{ckt.h, ckti2nod.c}: committed Vera 